Adjustes no ProjectMapper para realizar a remoção correta de clientes